--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,12 @@
 version: '3.9'
 services:
-  devops_backend:
-    image: devops_backend:latest
+  tuwaiq_prj_server:
+    image: tuwaiq_prj_server:latest
     build: .
     ports:
       - '3001:3001'
-  devops_frontend:
-    image: devops_frontend:latest
+  tuwaiq_prj_client:
+    image: tuwaiq_prj_client:latest
     environment:
       PORT: 3000
       PROXY_API: http://devops_backend:3001/
